--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 .vs/AStar/v17/Browse.VC.db
 AStar/bin
 AStar/intermediate
+.vs/AStar/v17/Browse.VC.db-shm
+.vs/AStar/v17/Browse.VC.db-wal
+.vs/AStar/v17/Browse.VC.opendb
+.vs/AStar/v17/Solution.VC.db
